<resources>
    <string name="app_name" translatable="false">PCallBlocker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_name">Contact name(optional)</string>
    <string name="delete_q">Delete entry?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit_title">Edit entry</string>
    <string name="alr_blocked">This number is already blocked</string>
    <string name="empty_nmb">Entered number is empty</string>
    <string name="last_call">Last call:</string>
    <string name="rejected_calls">Rejected calls: </string>
    <string-array name="items_menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>
    <string-array name="rejected_menu">
        <item>Call</item>
        <item>Delete</item>
    </string-array>
    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="empty_array"/>
    <string-array name="stores">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="by_day_title">Blocking by day</string>
    <string name="by_day_sum">Block only for chosen days</string>
    <string name="days_title">Days of week</string>
    <string name="days_sum">Choose days when block should work</string>
    <string name="mute_title">Block type</string>
    <string name="mute_sum">On - mute only, Off - end call</string>
    <string name="missed_call">Missed</string>
    <string name="outgoing_call">Outgoing</string>
    <string name="incoming_call">Incoming</string>
    <string-array name="add_from">
        <item>Manual</item>
        <item>From call log</item>
        <item>From contacts list</item>
    </string-array>
    <string name="add">Add</string>
    <string name="add_call_log">Add this number to blacklist?</string>
    <string name="call_log_succ">Number succesfully added</string>
    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="share">Share</string>
    <string name="rate_app">Rate this app!</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="blocking_enabled">Blocking enabled</string>
    <string name="blocking_enabled_summary">Enable/disable blocking</string>
    <string name="hidden_nmbrs">Hidden numbers</string>
    <string name="hidden_summary">Block all call from hidden numbers</string>
    <string name="international_nmbrs">International numbers</string>
    <string name="international_summary">Block all calls from international numbers</string>
    <string name="not_contacts">Not in my contacts</string>
    <string name="not_summary">Block all calls from numbers not in your contact list</string>
    <string name="all_numbers">Block all numbers</string>
    <string name="all_summary">Block all calls from all numbers</string>
    <string name="manual">Manual add</string>
    <string name="contact_list_add">Add from contact list</string>
    <string name="last_call_add">From last incoming</string>
    <string name="first_hidden">Block hidden number?</string>
    <string name="first_international">Block international?</string>
    <string name="first_not_contact">Block not in contacts?</string>
    <string name="first_title">Select which type of numbers you want to block</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="security_settings">Security settings</string>
    <string name="first_password">Create a password?</string>
    <string name="block_pref">Blocking settings</string>
    <string name="security_pref">Security settings</string>
    <string name="password_on">Password blocking</string>
    <string name="pin">PIN-code</string>
    <string name="password_summary">Enable/disable password</string>
    <string name="pin_summary">Press for change PIN</string>
    <string name="current_pin_dialog">Enter current PIN</string>
    <string name="pin_new">Enter new pin</string>
    <string name="invalid_pin">PIN is incorrect</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="pin_change_succ">Pin changed succesfully</string>
    <string name="pin_enter">Enter PIN</string>
    <string name="reject_type">Blocking reason:</string>
    <string name="international_reject">International call</string>
    <string name="reject_all">Block all</string>
    <string name="reject_not">Not in contacts</string>
    <string name="reject_black">Blacklist</string>
    <string name="notification">Notification settings</string>
    <string name="notification_on">Enable notification</string>
    <string name="notification_sum">Enabling/disabling notification</string>
    <string name="add_start_from">Starting from...</string>
    <string name="phone_number_contains">Phone number code (6 symbols max.)</string>
    <string name="last_not_found">Incoming number not found</string>
    <string name="unknown_number">Unknown number</string>
    <string name="cant_unknow">Can\'t add unknown number</string>
    <string name="pin_setup_succ">Pin setup succesfull</string>
    <string name="send_email">Send e-mail...</string>
    <string name="share_via">Share via</string>
    <string name="version_text">Version</string>
    <string name="version" translatable="false">1.0.7</string>
    <string name="visit_web">Visit our website</string>
    <string name="contact_us">Contact with us</string>
    <string name="legal">Legal</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>