<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/block_pref">
    <SwitchPreference
        android:summary="@string/blocking_enabled_summary"
        android:title="@string/blocking_enabled"
        android:key="block_enabled">
    </SwitchPreference>

        <SwitchPreference
            android:summary="@string/mute_sum"
            android:title="@string/mute_title"
            android:key="mute_only"
            android:dependency="block_enabled"/>

    <SwitchPreference
        android:summary="@string/hidden_summary"
        android:title="@string/hidden_nmbrs"
        android:key="hidden"
        android:dependency="block_enabled">
    </SwitchPreference>
    <SwitchPreference
    android:summary="@string/international_summary"
    android:title="@string/international_nmbrs"
        android:key="international"
        android:dependency="block_enabled">
    </SwitchPreference>
    <SwitchPreference
        android:summary="@string/not_summary"
        android:title="@string/not_contacts"
        android:key="not_contacts"
        android:dependency="block_enabled">
    </SwitchPreference>
    <SwitchPreference
        android:summary="@string/all_summary"
        android:title="@string/all_numbers"
        android:key="all_numbers"
        android:dependency="block_enabled">
    </SwitchPreference>
        <CheckBoxPreference
            android:key="calendar"
            android:title="@string/by_day_title"
            android:summary="@string/by_day_sum"/>
        <MultiSelectListPreference
            android:key="day_of_week"
            android:title="@string/days_title"
            android:summary="@string/days_sum"
            android:entries="@array/day_of_week"
            android:entryValues="@array/stores"
            android:defaultValue="@array/empty_array"
            android:dependency="calendar"/>
</PreferenceCategory>
    <PreferenceCategory android:title="@string/notification">
        <SwitchPreference
            android:summary="@string/notification_sum"
            android:title="@string/notification_on"
            android:key="notification_on"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/security_pref">
    <SwitchPreference
        android:summary="@string/password_summary"
        android:title="@string/password_on"
        android:key="password_on"/>
        <Preference
            android:title="@string/pin"
            android:summary="@string/pin_summary"
            android:enabled="false"
            android:dependency="password_on"
            android:key="pin"/>
    </PreferenceCategory>


</PreferenceScreen>