<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.androidbegin.callblocker.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings1"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/rate_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>

</menu>
