<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/WelcomeScreenTheme.Light"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/first_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textSize="20sp" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">


        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:checked="true"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:text="@string/first_hidden"
            android:textSize="16sp"
            style="@style/WelcomeScreenTheme.Light"
            android:id="@+id/hidden" />

        <TextView
            android:id="@+id/description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hidden_summary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">


        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:text="@string/first_international"
            android:textSize="16sp"
            style="@style/WelcomeScreenTheme.Light"
            android:id="@+id/international"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/international_summary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">


        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="0"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:text="@string/first_not_contact"
            android:textSize="16sp"
            android:id="@+id/not_in"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_summary"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
